refactor: improve the error strategy collectors
1- Updated methods to return Either<List<String>, XYZ> to collect validation errors.
2- Added exception handling for date parsing in toDateValueFilter and updated the method to return Either<String, DateValueFilter>.
3- Updated the toUserTaskFilter method to collect date parsing errors.
4- Collected validation errors as List<String> and joined them into one ProblemDetail at the end.
5- Updated the outermost caller methods (toProcessInstanceQuery and toUserTaskQuery) to create the ProblemDetail if there are validation errors.